test/should_pass/basic_020.grg
actions basic_020;

rule r {
	pattern {
		x : Node;
		y : Node;
		negative {
			x --> y : Node;
		}
	}
	modify {
		x;
		y;
	}
}

