test/should_fail/reuse_001.grg
rule r {
	pattern {
		x: Node;
		y: Node;
		x -e:Edge-> y;
	}
	replace{
		y;
		x-e->.;
	}
}
